[package]
name = "physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "spring"
path = "src/spring.rs"

[[bin]]
name = "gravity"
path = "src/gravity.rs"

[[bin]]
name = "friction"
path = "src/friction.rs"

[[bin]]
name = "drag"
path = "src/drag.rs"


[dependencies]
macroquad = "0.4.4"
